<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">등하교 천사</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">등하교 천사</string>
    <string name="gcm_title">등하교 천사 알림</string>
    <string name="title_activity_authorize">등하교 천사 번호 등록</string>
    <string name="title_activity_messages">디아크 등하교 천사</string>
    <string name="title_activity_history">등하교 천사 내역</string>
    <string name="title_activity_notices">등하교 천사 공지사항</string>
    <string name="title_activity_notice_detail">NoticeDetailActivity</string>
    <string name="title_activity_parents_main">ParentsMainActivity</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="send">전송</string>
    <string name="request_auth">인증 요청</string>
    <string name="auth_check">인증 확인</string>
    <string name="confirm">확인</string>
    <string name="cellphone_number">휴대전화 번호</string>
    <string name="certification_number">인증 번호</string>
    <string name="clear_messages">전체 메세지 삭제</string>
    <string name="clear_histories">전체 기록 삭제</string>
    <string name="information">알림</string>
    <string name="close">닫기</string>
    <string name="exit">나가기</string>
    <string name="continue_">계속</string>
    <string name="cancel">취소</string>
    <string name="msg_play_service_disable">플레이 서비스에 접근할 수 없습니다. 앱을 종료합니다.</string>
    <string name="msg_select_registration_type">인증유형을 선택해 주십시요.</string>
    <string name="msg_insert_cellphone_number">휴대전화 번호를 입력해 주십시요.</string>
    <string name="msg_insert_certification_number">인증 번호를 입력해 주십시요.</string>
    <string name="msg_gps_setting_confirm">GPS 위치 서비스에 접근할 수 없습니다. GPS 설정을 변경해 주십시오.</string>
    <string name="msg_empty_mobile_number">휴대전화 번호를 입력해 주십시요.</string>
    <string name="msg_empty_auth_number">인증번호를 입력해 주십시요.</string>
    <string name="msg_request_auth_number">인증번호를 요청하는 중입니다.</string>
    <string name="msg_request_auth_check">인증번호를 확인하는 중입니다.</string>
    <string name="msg_request_regist_device_id">푸시 서비스를 위한 기기 고유정보를 등록하는 중입니다.</string>
    <string name="msg_send_request">서버에 정보를 요청중입니다.</string>
    <string name="msg_request_success">정보 요청이 완료되었습니다.</string>
    <string name="msg_request_fail">정보 요청이 실패했습니다.</string>
    <string name="msg_auth_success">인증이 완료되었습니다.</string>
    <string name="msg_auth_fail">인증이 실패했습니다. 인증번호를 확인해 주십시요.</string>
    <string name="msg_phone_authorize_fail">휴대전화번호 인증을 하지 못했습니다.</string>
    <string name="msg_device_registration_fail">기기 고유정보를 등록하지 못했습니다.</string>
    <string name="msg_exit_confirm">등하교천사 앱을 종료하시겠습니까?</string>
    <string name="msg_clear_messages_confirm">모든 메세지를 삭제하시겠습니까?</string>
    <string name="msg_delete_messages_confirm">선택한 메세지를 삭제하시겠습니까?</string>
    <string name="msg_request_messages">메세지 정보를 업데이트 합니다.</string>
    
    <string-array name="registration_types">
        <item>학부모</item>
        <item>학생</item>
        <item>선생님</item>
    </string-array>

    <color name="transparent">#00000000</color>
    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>
    <color name="dark_gray">#464646</color>
    <color name="gray">#898989</color>
    <color name="light_gray">#d7d7d7</color>
    <color name="light_green">#55bc75</color>
    <color name="red">#ff0000</color>
    <color name="yellow">#ffff00</color>
    <color name="cyon">#00ffff</color>
    <color name="magenta">#ff00ff</color>
    <color name="orange">#f7941d</color>
    <color name="green">#00a651</color>
    <color name="light_red">#e86843</color>


</resources>
