<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthorizeActivity" >
    
<RelativeLayout
	    android:id="@+id/layout_title"
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/title_height"
	    android:paddingTop="@dimen/title_padding"
	    android:paddingBottom="@dimen/title_padding"
	    android:paddingLeft="@dimen/title_side_padding"
	    android:paddingRight="@dimen/title_side_padding"
	    android:background="@color/dark_gray" >
	    
	    <ImageView
	        android:id="@+id/title_logo"
	        android:layout_width="60dp"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_centerVertical="true"
	        android:scaleType="fitEnd"
	        android:src="@drawable/darc_icon" />

	    <TextView
	        android:id="@+id/title_label"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_toLeftOf="@+id/title_logo"
	        android:textSize="@dimen/title_fontsize"
	        android:textColor="@color/white"
	        android:textStyle="bold"
	       	android:text="@string/title_activity_authorize" />
	</RelativeLayout>
	
	<LinearLayout
	    android:id="@+id/layoutBody"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:layout_below="@+id/layout_title"
	    android:padding="@dimen/body_padding" >

	    <TextView
	        android:visibility="gone"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textSize="@dimen/caption_fontsize"
	        android:textColor="@color/black"
	        android:text="@string/msg_select_registration_type" />
		<Spinner
		    android:id="@+id/regType"
		    android:visibility="gone"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="@dimen/item_margin" />
		
		<TextView
		    android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/section_margin"
	        android:textSize="@dimen/caption_fontsize"
	        android:textColor="@color/black"
	        android:text="@string/msg_insert_cellphone_number" />
		<RelativeLayout
		    android:layout_width="match_parent"
		    android:layout_height="@dimen/input_height"
		    android:layout_marginTop="@dimen/item_margin" >
		    <Button
		        android:id="@+id/sendButton"
		        android:layout_width="100dp" 
		        android:layout_height="match_parent"
		        android:layout_alignParentRight="true"
		        android:textSize="@dimen/button_fontsize"
		        android:text="@string/request_auth" />
		    <EditText
		        android:id="@+id/phoneNumEdit"
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_toLeftOf="@+id/sendButton"
				android:inputType="phone"
				android:textSize="@dimen/number_input_fontsize"
				android:hint="@string/cellphone_number" />
		</RelativeLayout>
		
		<TextView
		    android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/section_margin"
	        android:textSize="@dimen/caption_fontsize"
	        android:textColor="@color/black"
	        android:text="@string/msg_insert_certification_number" />
		<RelativeLayout
		    android:layout_width="match_parent"
		    android:layout_height="@dimen/input_height"
		    android:layout_marginTop="@dimen/item_margin" >
		    <Button
		        android:id="@+id/certButton"
		        android:layout_width="100dp" 
		        android:layout_height="match_parent"
		        android:layout_alignParentRight="true"
		        android:textSize="@dimen/button_fontsize"
		        android:text="@string/auth_check" />
		    <EditText
		        android:id="@+id/certNumEdit"
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_toLeftOf="@+id/certButton"
				android:inputType="number"
				android:hint="@string/certification_number" />
		</RelativeLayout>
				
	    
	</LinearLayout>
</RelativeLayout>
